# specfmt

./: Cargo.toml  LICENSE  README.md  source
.github/workflows/: workflow.yml
src/: main.rs  rewrapper.rs
testcases/: comment-contains-exempt-block.in.html  comment-contains-exempt-block.out.html  comment-standalone.in.html  comment.in.html  comment.out.html  dl-markdown.in.html  dl-markdown.out.html  dt-not-smooshed-up.out.html  everything-too-long.in.html  everything-too-long.out.html  exempt-blocks.in.html  header.in.html  header.out.html  li-dfn.in.html  li-dfn.out.html  list-no-gaps.in.html  multiple-dd-same-line.out.html  multiple-dd.out.html  nested-exempt.in.html  nested-exempt.out.html  normal-p.in.html  normal-p.out.html  numbered-list.in.html  numbered-list.out.html  only-long-indent.in.html  single-word-exectly-column-length.in.html  single-word-exectly-column-length.out.html  two-paragraphs.out.html  unicode-characters.out.html  unordered-list.in.html  unordered-list.out.html
testcases/git_diff/: addition-in-middle-but-last-line-has-terminating-condition.diff  addition-in-middle-but-last-line-has-terminating-condition.in.html  addition-in-middle-but-last-line-has-terminating-condition.out.html  addition-in-middle-generic.diff  addition-in-middle-generic.in.html  addition-in-middle-generic.out.html  addition-in-middle-no-newline.diff  addition-in-middle-no-newline.in.html  addition-in-middle-no-newline.out.html  addition-in-middle-of-p-does-not-look-upward.diff  addition-in-middle-of-p-does-not-look-upward.in.html  addition-in-middle-of-p-does-not-look-upward.out.html  addition-in-middle-of-p.diff  addition-in-middle-of-p.in.html  addition-in-middle-of-p.out.html  dd-addition-terminating-point.diff  (+19 more)
