[package]
name = "specfmt"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Command line tool to format Bikeshed and Wattsi specifications using WHATWG conventions"
readme = "README.md"
repository = "https://github.com/domfarolino/specfmt"
keywords = ["whatwg", "w3c", "web-specification", "web-standard", "bikeshed"]
categories = ["command-line-utilities", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.5"

[dev-dependencies]
test-generator = "0.3.0"
