[package]
name = "specfmt"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Command line tool to format Bikeshed and Wattsi specifications using WHATWG conventions"
readme = "README.md"
repository = "https://github.com/domfarolino/specfmt"
keywords = ["whatwg", "w3c", "web-specification", "web-standard", "bikeshed"]
categories = ["command-line-utilities", "web-programming"]

# See https://stackoverflow.com/a/54842093/3947332.
[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.5"

[dev-dependencies]
test-generator = "0.3.0"
